[package]
name = "shell"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[features]
no_std = ["shim/no_std"]
local = ["termios"]

[dependencies]
stack-vec = { path = "../stack-vec/" }
shim = { path = "../shim", features = ["alloc"] }
fat32 = { path = "../fat32" }
termios = { version = "0.3", optional = true }
